[package]
edition = "2018"
name = "bluenrg"
version = "0.1.0"
authors = ["Daniel Gallagher <pdanielgallagher@gmail.com>"]
categories = ["embedded", "hardware-support"]
description = "Interface to ST Micro BlueNRG Bluetooth radios"
keywords = [ "bare-metal", "embedded-hal-driver"]
license = "MIT/Apache-2.0"
repository = "https://github.com/danielgallagher0/bluenrg"
readme = "README.md"

[features]
default = ["ms"]

# The chip implements the newer BlueNRG-MS version of the HCI.
ms = []

[dependencies]
nb = "1.0"
bluetooth-hci = "0.1.0"
bitflags = "1.2"


[dependencies.byteorder]
version = "1"
default-features = false
